--- a/style/global.css
+++ b/style/global.css
@@ -69,3 +69,74 @@
   font-weight: 700 !important;
   line-height: normal !important;
 }
+
+/* connect section */
+.title-connect {
+  color: var(--text-color);
+  font-size: 46px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 58px; /* 125% */
+  letter-spacing: 0.2px;
+}
+
+.desc-connect {
+  color: var(--text-light);
+  font-family: Open Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.card {
+  border-radius: 8px !important;
+  border: 2px solid #b3bac5 !important;
+  padding: 0px 24px !important;
+}
+
+.card-title-custom {
+  color: var(--primary-color) !important;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px; /* 125% */
+  letter-spacing: 0.2px;
+}
+
+.card-subtitle-custom {
+  color: var(--text-color);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px; /* 125% */
+  letter-spacing: 0.2px;
+}
+
+.card-text-custom {
+  color: var(--text-light);
+  font-family: Open Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+/* protect section */
+
+.item-title {
+  color: var(--text-color);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px; /* 120% */
+  letter-spacing: 0.2px;
+}
+
+.item-description {
+  color: var(--text-light);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
